additional UI updates

--- a/networking/docs/requirements.txt
+++ b/networking/docs/requirements.txt
@@ -1,7 +1,9 @@
 Sphinx
-git+git://github.com/f5devcentral/f5-sphinx-theme@v2.0.1#egg=f5_sphinx_theme
+#git+git://github.com/f5devcentral/f5-sphinx-theme@v2.0.1#egg=f5_sphinx_theme
+git+git://github.com/f5devcentral/f5-sphinx-theme@v2.0.8#egg=f5_sphinx_theme
 recommonmark
 sphinxcontrib-googleanalytics
 sphinxcontrib-addmetahtml
 sphinxcontrib-nwdiag
 sphinxcontrib-blockdiag
+sphinx-copybutton
