--- a/application/docs/requirements.txt
+++ b/application/docs/requirements.txt
@@ -1,5 +1,5 @@
 Sphinx
-git+git://github.com/f5devcentral/f5-sphinx-theme@v2.0.1#egg=f5_sphinx_theme
+git+https://github.com/f5devcentral/f5-sphinx-theme@v2.0.1#egg=f5_sphinx_theme
 recommonmark
 sphinxcontrib-googleanalytics
 sphinxcontrib-addmetahtml
